--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -1,7 +1,7 @@
 layout:
   application:
     logo-alt-text: 'Ember Octane: die neueste Edition von Ember.js'
-    title: Ember.js Octane vs Classic Cheat Sheet
+    title: EmberData Request Service Cheat Sheet
     description-1: >
       Dieses Guide ist ein '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">'Ember Octane'</a>'-Spickzettel.
       Sie finden nicht alles darin, aber es sollte Ihren Einstieg in Ember.js erleichtern.
