--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -1,20 +1,20 @@
 layout:
   application:
     logo-alt-text: 'Ember Octane: the latest edition from Ember.js'
-    title: Ember.js Octane vs Classic Cheat Sheet
+    title: EmberData Request Service Cheat Sheet
     description-1: >
-      This guide is a cheat sheet for using '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">'Ember.js Octane'</a>'.
+      This guide is a cheat sheet for using '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">EmberData&#39;s Request Service</a>'.
       It doesn't cover everything, but it should get you started!
       PRs welcome at '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'the GitHub repository'</a>'.
     description-2: >
-      For in-depth information about the upgrade paths and differences introduced in Octane, see '<a href="https://guides.emberjs.com/release/upgrading/" target="_blank" rel="noopener noreferrer">'The Octane Upgrading Guide'</a>'.
+      For in-depth information about the upgrade paths and differences compared to older EmberData patterns, see '<a href="https://rfcs.emberjs.com/id/0860-ember-data-request-service/" target="_blank" rel="noopener noreferrer">the RFC for the EmberData Request Service</a>'.
 
 component:
   guide-section:
     section: §
     subsection:
-      classic: Classic
-      octane: Octane
+      classic: Older patterns
+      octane: Request Service
     edit-translation-text: Edit Translation
   locale-menu:
     locale-select:
