--- a/translations/es.yaml
+++ b/translations/es.yaml
@@ -1,7 +1,7 @@
 layout:
   application:
     logo-alt-text: 'Ember Octane: la última edición de Ember.js'
-    title: Ember.js Octane vs Classic Cheat Sheet
+    title: EmberData Request Service Cheat Sheet
     description-1: >
       Esta guía es una hoja de referencia para usar '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">'Ember.js Octane'</a>'.
       No cubre todo, ¡pero debería ayudarlo a comenzar!
