--- a/translations/fr-fr.yaml
+++ b/translations/fr-fr.yaml
@@ -1,7 +1,7 @@
 layout:
   application:
     logo-alt-text: 'Ember Octane: the latest edition from Ember.js'
-    title: Ember.js Octane vs Classic Cheat Sheet
+    title: EmberData Request Service Cheat Sheet
     description-1: >
       Ce guide est un aide-mémoire (eng: cheat sheet) afin d'utiliser '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">'Ember.js Octane'</a>'.
       Tout n'y est pas abordé, mais il devrait permettre de bien démarrer avec Octane!
