--- a/translations/fetching-data/find-all/en-us.yaml
+++ b/translations/fetching-data/find-all/en-us.yaml
@@ -1,3 +1,3 @@
 title: findAll
 description: |
-  There is no direct replacement for <code>findAll</code>, you should just use <code>query</code> without options instead.
+  There is no direct replacement for <code>findAll</code>, you can use <code>query</code> without extra options instead. Here is how to achieve exact <code>findAll</code> behavior:
