--- a/translations/es.yaml
+++ b/translations/es.yaml
@@ -1,20 +1,20 @@
 layout:
   application:
-    logo-alt-text: 'Ember Octane: la última edición de Ember.js'
-    title: EmberData Request Service Cheat Sheet
+    logo-alt-text: 'EmberData Request Service Cheat Sheet'
+    title: Hoja de trucos del servicio de solicitud de EmberData
     description-1: >
-      Esta guía es una hoja de referencia para usar '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">'Ember.js Octane'</a>'.
-      No cubre todo, ¡pero debería ayudarlo a comenzar!
-      PRs bienvenidos en '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'el repositorio de GitHub'</a>'.
+      Esta guía es una hoja de trucos para usar el '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">Servicio de solicitud de EmberData</a>'.
+      No cubre todo, ¡pero te ayudará a empezar!
+      Se aceptan PRs en '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'el repositorio de GitHub'</a>'.
     description-2: >
-      Para obtener información detallada sobre la ruta de actualización y las diferencias introducidas en Octane, vea '<a href="https://guides.emberjs.com/release/upgrading/" target="_blank" rel="noopener noreferrer">'The Octane Upgrading Guide'</a>'.
+      Para obtener información detallada sobre las rutas de actualización y las diferencias en comparación con los patrones antiguos de EmberData, consulta '<a href="https://rfcs.emberjs.com/id/0860-ember-data-request-service/" target="_blank" rel="noopener noreferrer">el RFC para el Servicio de solicitud de EmberData</a>'.
 
 component:
   guide-section:
     section: §
     subsection:
-      classic: Classic
-      octane: Octane
+      classic: Older patterns
+      octane: Request Service
     edit-translation-text: Editar traducción
   locale-menu:
     locale-select:
