--- a/translations/fr-fr.yaml
+++ b/translations/fr-fr.yaml
@@ -1,20 +1,20 @@
 layout:
   application:
-    logo-alt-text: 'Ember Octane: the latest edition from Ember.js'
-    title: EmberData Request Service Cheat Sheet
+    logo-alt-text: 'Feuille de triche du service de demande EmberData'
+    title: Feuille de triche du service de demande EmberData
     description-1: >
-      Ce guide est un aide-mémoire (eng: cheat sheet) afin d'utiliser '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">'Ember.js Octane'</a>'.
-      Tout n'y est pas abordé, mais il devrait permettre de bien démarrer avec Octane!
-      Toutes les PRs sont les bienvenues sur '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'le repository GitHub'</a>'.
+      Ce guide est une feuille de triche pour utiliser le '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">service de demande EmberData</a>'.
+      Il ne couvre pas tout, mais cela devrait vous aider à démarrer!
+      Les PR sont les bienvenus sur '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'le dépôt GitHub'</a>'.
     description-2: >
-      Pour plus d'information sur la manière de migrer vers Octane et les nouveautés qui y sont introduites, consultez '<a href="https://guides.emberjs.com/release/upgrading/" target="_blank" rel="noopener noreferrer">'Le guide de migration vers Octane'</a>'.
+      Pour des informations approfondies sur les chemins de mise à niveau et les différences par rapport aux anciens modèles EmberData, consultez '<a href="https://rfcs.emberjs.com/id/0860-ember-data-request-service/" target="_blank" rel="noopener noreferrer">la RFC pour le service de demande EmberData</a>'.
 
 component:
   guide-section:
     section: §
     subsection:
-      classic: Classic
-      octane: Octane
+      classic: Older patterns
+      octane: Request Service
     edit-translation-text: Edit Translation
   locale-menu:
     locale-select:
