--- a/translations/ja.yaml
+++ b/translations/ja.yaml
@@ -1,20 +1,20 @@
 layout:
   application:
-    logo-alt-text: 'Ember Octane: Ember.jsの最新版'
-    title: Ember.js OctaneとClassicの比較用チートシート
+    logo-alt-text: 'EmberData リクエストサービス チートシート'
+    title: EmberData リクエストサービス チートシート
     description-1: >
-      このガイドは、'<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">'Ember.js Octane'</a>'を使うためのチートシートです。
-      すべてを網羅しているわけではありませんが、始めるには十分です！
-      プルリクエストを'<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'GitHubリポジトリ'</a>'でお待ちしてます。
+      このガイドは、'<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">EmberDataのリクエストサービス</a>'の使用に関するチートシートです。
+      すべてを網羅しているわけではありませんが、スタートするのに役立つでしょう！
+      '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">GitHubリポジトリ</a>'でのPRは歓迎です。
     description-2: >
-      より詳細なアップグレードパスや、Octaneで導入された違いについての情報は、'<a href="https://guides.emberjs.com/release/upgrading/" target="_blank" rel="noopener noreferrer">'The Octane Upgrading Guide'</a>'を参照してください。
+      アップグレードパスや古いEmberDataパターンとの違いについての詳細な情報については、'<a href="https://rfcs.emberjs.com/id/0860-ember-data-request-service/" target="_blank" rel="noopener noreferrer">EmberDataリクエストサービスのRFC</a>'を参照してください。
 
 component:
   guide-section:
     section: §
     subsection:
-      classic: Classic
-      octane: Octane
+      classic: Older patterns
+      octane: Request Service
     edit-translation-text: 翻訳を修正する
   locale-menu:
     locale-select:
