--- a/translations/pt-br.yaml
+++ b/translations/pt-br.yaml
@@ -1,20 +1,20 @@
 layout:
   application:
-    logo-alt-text: 'Ember Octane: a mais recente edição do Ember.js'
+    logo-alt-text: 'EmberData Request Service Cheat Sheet'
     title: EmberData Request Service Cheat Sheet
     description-1: >
-      Esse guia é uma cola para usar o '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">'Ember.js Octane'</a>'.
-      Ele não cobre tudo, mas é o suficiente para você começar!
-      Pull requests são bem-vindos no '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'repositório do GitHub'</a>'.
+      Este guia é um resumo para usar o '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">Serviço de Requisição do EmberData</a>'.
+      Não cobre tudo, mas deve te ajudar a começar!
+      Contribuições são bem-vindas no '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'repositório do GitHub'</a>'.
     description-2: >
-      Para uma visão mais aprofundada sobre as formas de atualizar e as diferenças introduzidas na Octane, veja '<a href="https://guides.emberjs.com/release/upgrading/" target="_blank" rel="noopener noreferrer">'The Octane Upgrading Guide'</a>'.
+      Para informações detalhadas sobre os caminhos de atualização e diferenças em relação aos padrões antigos do EmberData, veja '<a href="https://rfcs.emberjs.com/id/0860-ember-data-request-service/" target="_blank" rel="noopener noreferrer">o RFC para o Serviço de Requisição do EmberData</a>'.
 
 component:
   guide-section:
     section: §
     subsection:
-      classic: Classic
-      octane: Octane
+      classic: Older patterns
+      octane: Request Service
     edit-translation-text: Editar tradução
   locale-menu:
     locale-select:
