--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -3,7 +3,7 @@ layout:
     logo-alt-text: 'EmberData Request Service Cheat Sheet'
     title: EmberData Request Service Cheat Sheet
     description-1: >
-      This guide is a cheat sheet for using '<a href="https://emberjs.com/editions/octane" target="_blank" rel="noopener noreferrer">EmberData&#39;s Request Service</a>'.
+      This guide is a cheat sheet for using '<a href="https://api.emberjs.com/ember-data/release/modules/@ember-data%2Frequest" target="_blank" rel="noopener noreferrer">EmberData&#39;s Request Service</a>'.
       It doesn't cover everything, but it should get you started!
       PRs welcome at '<a href="https://github.com/ember-learn/ember-data-request-service-cheat-sheet" target="_blank" rel="noopener noreferrer">'the GitHub repository'</a>'.
     description-2: >
