--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -33,3 +33,8 @@ component:
     locale-fr-FR: Français
     locale-ja: 日本語
     locale-pt-BR: Português (do Brasil)
+  sidebar-nav:
+    toggle-menu: "Toggle menu"
+    table-of-contents: "Table of contents"
+    contents: "Contents"
+    subsections-of: "Subsections of {sectionTitle}"
