grammar and spelling

--- a/translations/adapters/path-for-type/en-us.yaml
+++ b/translations/adapters/path-for-type/en-us.yaml
@@ -2,4 +2,4 @@ title: Use request builders instead of pathForType
 description: >
   To modify a URL for a request you can use the '<code>'resourcePath'</code>' option for every request builder. Default configuration for '<code>'JSON:API'</code>', '<code>'REST'</code>', and '<code>'ActiveRecord'</code>' builders will be provided by EmberData.
   <br />
-  We recommend creating your own utility file with request builders that suite your backend's needs.
+  We recommend creating your own utility file with request builders that suit your backend's needs.
