--- a/translations/fetching-data/find-all/en-us.yaml
+++ b/translations/fetching-data/find-all/en-us.yaml
@@ -1,4 +1,4 @@
 title: findAll
 description: |
-  There is no direct replacement for <code>findAll</code>, you can use <code>query</code> without extra options instead. Here is how to achieve exact <code>findAll</code> behavior:
-  We discourage using <code>peekAll</code>. When you made a request, you need to guarantee that everything you requested is part of response you get back.
+  There is no direct replacement for <code>findAll</code>, so you can use <code>query</code> with extra options instead. Here's how to achieve exact <code>findAll</code> behavior:
+  We discourage using <code>peekAll</code>, but it is currently the best way to guarantee that everything you requested is part of the response you get back.
