--- a/translations/fetching-data/find-record/en-us.yaml
+++ b/translations/fetching-data/find-record/en-us.yaml
@@ -1,3 +1,3 @@
 title: findRecord
 description: |
-  Examples here are shown for apps that use JSON:API. Apps using other paradigms should use the builders for REST or ActiveRecord if applicable, or author their own (or a new community lib!) if not.
+  Examples here are shown for apps that use JSON:API. Apps using other paradigms should use the builders for REST or ActiveRecord if applicable, or author their own (or a new community library!) if not.
